--- a/app/src/main/res/layout/popup_text_voice_layout.xml
+++ b/app/src/main/res/layout/popup_text_voice_layout.xml
@@ -9,18 +9,30 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/device"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        app:cardCornerRadius="4dp"
+        android:layout_marginBottom="-15dp"
+        app:cardCornerRadius="8dp"
         app:cardElevation="0dp">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/language_recycle_view"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/view"
-            android:layout_gravity="center_horizontal" />
+            android:orientation="vertical">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/language_recycle_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical"
+                android:layout_gravity="center_horizontal" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+        </LinearLayout>
+
 
     </android.support.v7.widget.CardView>
 
@@ -28,7 +40,23 @@
         android:id="@+id/view"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/shape_inverted_triangle_yellow" />
+        android:background="@drawable/shape_inverted_triangle_yellow"
+        android:visibility="gone" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@color/color_f0eff5" />
+
+    <TextView
+        android:id="@+id/button_cancle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:gravity="center"
+        android:padding="@dimen/dp_10"
+        android:text="取消"
+        android:textColor="@color/color_000000"
+        android:textSize="16sp" />
 
 </LinearLayout>
